Begins to run analysis scripts without error

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,19 +35,20 @@ Imports:
     doMC,
     viridis
 Collage:
-    'sample_sources.R',
-    'methods.R',
-    'density_estimation.R',
-    'primary_modes.R',
+    'compare_sample_sources.R',
     'features_analysis.R',
-    'ggplot2_geom_indicator.R',
-    'ggplot2_scales.R',
-    'instancer.R',
     'output_formats.R',
-    'save_plots.R',
-    'save_tables.R',
-    'coordinate_normalizations.R',
-    'comparison_statistics.R',
-    'generate_plot_webpage.R',
-    'vector_math.R',
-    'color_palettes.R',
+    'support-comparison_statistics.R',
+    'support-coordinate_normalizations.R',
+    'support-density_estimation.R',
+    'support-ggplot2_geom_indicator.R',
+    'support-ggplot2_peak_labels.R',
+    'support-hbond_geo_dim_scales.R',
+    'support-instancer.R',
+    'support-locate_rosetta_application.R',
+    'support-polynomial_methods.R'
+    'support-primary_modes.R',
+    'support-query_sample_source.R',
+    'support-save_plots.R',
+    'support-save_tables.R',
+    'support-vector_math.R'
